Fix spacing issues in css

--- a/css/main.css
+++ b/css/main.css
@@ -8,11 +8,12 @@ html {
 
 body{
       background-color: #ccc;
-font-family:sans-serif;
+font-family: sans-serif;
 }
 
 h1 {
   font-size: 1.5rem;
+}
 
   article {
   font-style: italic;
